Fix Bug 1256668, update newsletter button styles site wide

--- a/bedrock/firefox/templates/firefox/android/index.html
+++ b/bedrock/firefox/templates/firefox/android/index.html
@@ -411,7 +411,7 @@
 
     {% block subscribe_wrapper %}
       <div id="subscribe-wrapper" class="floating">
-        {{ email_newsletter_form(title=_('Get Firefox news')) }}
+        {{ email_newsletter_form(title=_('Get Firefox news'), button_class='white') }}
       </div>
     {% endblock %}
     </div>
