--- a/bedrock/firefox/templates/firefox/desktop/desktop-base.html
+++ b/bedrock/firefox/templates/firefox/desktop/desktop-base.html
@@ -28,7 +28,7 @@
   <div id="subscribe-download-wrapper" class="ga-section" data-ga-label="Get Firefox news">
     <div class="container">
       <div id="subscribe-wrapper">
-        {{ email_newsletter_form(title=_('Get Firefox news')) }}
+        {{ email_newsletter_form(title=_('Get Firefox news'), button_class='white') }}
       </div>
       <div id="download-wrapper">
         {{ download_firefox() }}
