--- a/bedrock/firefox/templates/firefox/family/index.html
+++ b/bedrock/firefox/templates/firefox/family/index.html
@@ -166,7 +166,7 @@
       <header>
         <h3>{{ _('All things Firefox.<br> Sent right to your inbox.') }}</h3>
       </header>
-      {{ email_newsletter_form(title=' ') }}
+      {{ email_newsletter_form(title=' ', button_class='white') }}
     </div>
   </aside>
   {% endif %}
