--- a/bedrock/firefox/templates/firefox/hello/index.html
+++ b/bedrock/firefox/templates/firefox/hello/index.html
@@ -124,7 +124,7 @@
         <header>
           <h3 class="compact">{{ _('Discover more ways to stay connected<br> with Firefox.') }}</h3>
         </header>
-        {{ email_newsletter_form(title=' ') }}
+        {{ email_newsletter_form(title=' ', button_class='white') }}
       </div>
     </aside>
     {% endif %}
