--- a/bedrock/firefox/templates/firefox/ios-b.html
+++ b/bedrock/firefox/templates/firefox/ios-b.html
@@ -13,7 +13,7 @@
       <header>
         <h3>{{ _('Get Firefox in your inbox, too.') }}</h3>
       </header>
-      {{ email_newsletter_form(title=' ') }}
+      {{ email_newsletter_form(title=' ', button_class='dark') }}
     </div>
   </aside>
   {% endif %}
