--- a/bedrock/firefox/templates/firefox/private-browsing-b.html
+++ b/bedrock/firefox/templates/firefox/private-browsing-b.html
@@ -13,7 +13,7 @@
         <header>
           <h3>{{ _('Keep up with all things Firefox.') }}</h3>
         </header>
-        {{ email_newsletter_form(title=' ') }}
+        {{ email_newsletter_form(title=' ', button_class='dark') }}
       </div>
     </aside>
     {% endif %}
