--- a/bedrock/firefox/templates/firefox/private-browsing.html
+++ b/bedrock/firefox/templates/firefox/private-browsing.html
@@ -137,7 +137,7 @@
         <header>
           <h3 class="compact">{{ _('Get privacy tips and more in our monthly Firefox newsletter.') }}</h3>
         </header>
-        {{ email_newsletter_form(title=' ') }}
+        {{ email_newsletter_form(title=' ', button_class='dark') }}
       </div>
     </aside>
     {% endif %}
