--- a/bedrock/base/templates/base-resp.html
+++ b/bedrock/base/templates/base-resp.html
@@ -155,7 +155,7 @@
 
       {% block content %}{% endblock %}
 
-      {% block email_form %}{{ email_newsletter_form() }}{% endblock %}
+      {% block email_form %}{{ email_newsletter_form(button_class='default thin') }}{% endblock %}
 
       </div><!-- close #wrapper -->
 
