Fix Bug 1256668, update newsletter button styles site wide

--- a/bedrock/mozorg/templates/mozorg/contribute/studentambassadors/join.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/studentambassadors/join.html
@@ -143,7 +143,7 @@
           </div>
         </section>
         <div class="form-submit">
-          <input type="submit" class="button" id="form-submit" value="{{_('Sign me up!')}}">
+          <input type="submit" class="button-newsletter" id="form-submit" value="{{_('Sign Up Now')}}">
         </div>
       </div>
   </form>
