--- a/media/css/mozorg/contribute/friends.less
+++ b/media/css/mozorg/contribute/friends.less
@@ -241,6 +241,7 @@
 
         // override default styling on email & country fields
         input[type="email"] {
+            padding: 4px 10px;
             width: auto;
 
             @media only screen and (max-width: @breakMobileLandscape) {
