--- a/media/css/newsletter/newsletter.less
+++ b/media/css/newsletter/newsletter.less
@@ -231,6 +231,10 @@
             .span(6);
             clear: left;
         }
+
+        input[type="submit"] {
+            width: 85%;
+        }
     }
 }
 
