--- a/media/css/sandstone/sandstone-resp.less
+++ b/media/css/sandstone/sandstone-resp.less
@@ -2,6 +2,7 @@
 @import "reset.less";
 @import "fonts.less";
 @import "buttons.less";
+@import "buttons-new.less";
 @import "animations.less";
 
 /* {{{ Basic Colors, Text, Links */
@@ -894,6 +895,7 @@ nav.menu-bar {
 
     input[type=email] {
         width: 80%;
+        padding: 15px 10px;
     }
 
     .field-privacy {
