--- a/media/css/sandstone/sandstone.less
+++ b/media/css/sandstone/sandstone.less
@@ -2,6 +2,7 @@
 @import "reset.less";
 @import "fonts.less";
 @import "buttons.less";
+@import "buttons-new.less";
 @import "animations.less";
 
 /* {{{ Basic Colors, Text, Links */
