--- a/bedrock/mozorg/templates/mozorg/home/home-b.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-b.html
@@ -8,15 +8,14 @@
   {% if LANG.startswith('en-') %}
   <section class="module" id="newsletter-subscribe" data-ga-label="Love the Web? Get the Mozilla newsletter and help us keep it open and free.">
     <div class="container">
-      {{ email_newsletter_form(newsletters='mozilla-foundation', title=_('Love the Web?'), subtitle=_('Get the Mozilla newsletter and help us keep it open and free.')) }}
+      {{ email_newsletter_form(newsletters='mozilla-foundation', title=_('Love the Web?'), subtitle=_('Get the Mozilla newsletter and help us keep it open and free.'), button_class='white') }}
     </div>
   </section>
   {% else %}
   <section class="module" id="newsletter-signup">
     <div class="container">
-      {{ email_newsletter_form() }}
+      {{ email_newsletter_form(button_class='dark') }}
     </div>
   </section>
   {% endif %}
 {% endblock %}
-
