--- a/bedrock/firefox/templates/firefox/new/scene1.html
+++ b/bedrock/firefox/templates/firefox/new/scene1.html
@@ -129,7 +129,7 @@
   </div>
 
   <div id="newsletter-latest">
-    {{ email_newsletter_form(button_class='default thin') }}
+    {{ email_newsletter_form() }}
   </div>
 </main>
 
