--- a/bedrock/firefox/templates/firefox/sync.html
+++ b/bedrock/firefox/templates/firefox/sync.html
@@ -265,7 +265,7 @@
 
 {% endblock %}
 
-{% block email_form %}{{ email_newsletter_form(button_class='default') }}{% endblock %}
+{% block email_form %}{{ email_newsletter_form(button_class='dark') }}{% endblock %}
 
 {% block js %}
   <!--[if IE 9]>
