--- a/media/css/sandstone/buttons-new.less
+++ b/media/css/sandstone/buttons-new.less
@@ -31,7 +31,8 @@ input[type="submit"].button-newsletter,
         border: 2px solid #333;
 
         &:hover {
-            border: 2px solid #999;
+            color: #595959;
+            border: 2px solid #595959;
         }
     }
 
@@ -48,12 +49,4 @@ input[type="submit"].button-newsletter,
             top: 1px;
         }
     }
-
-    /* for newsletter signup submit buttons inside the billboard container.
-       This might have other use cases so, leaving it as a specific style rule for now
-     */
-    &.thin {
-        min-height: 25px;
-    }
-
 }
