--- a/bedrock/mozorg/templates/mozorg/base-resp.html
+++ b/bedrock/mozorg/templates/mozorg/base-resp.html
@@ -8,8 +8,8 @@
 
 {% block email_form %}
   {% if LANG == 'en-US' %}
-    {{ email_newsletter_form(newsletters='mozilla-foundation', title=_('Get Mozilla updates'), button_class='default thin') }}
+    {{ email_newsletter_form(newsletters='mozilla-foundation', title=_('Get Mozilla updates')) }}
   {% else %}
-    {{ email_newsletter_form(button_class='default thin') }}
+    {{ email_newsletter_form() }}
   {% endif %}
 {% endblock %}
