[bug 1248040] Update GTM data attributes missed on first pass through

--- a/bedrock/base/templates/macros.html
+++ b/bedrock/base/templates/macros.html
@@ -284,7 +284,7 @@
     {# Page will dictate CTA (button, usually) to be placed in this wrapper #}
     <div id="fxfamilynav-cta-wrapper" class="fxfamilynav-cta-wrapper">{% if caller %}{{ caller() }}{% endif %}</div>
 
-    <button type="button" id="fxfamilynav-tertiarynav-trigger" class="fxfamilynav-tertiarynav-trigger" aria-controls="fxfamilynav-tertiarynav" data-link-type="nav" data-link-name="Open Side Menu">
+    <button type="button" id="fxfamilynav-tertiarynav-trigger" class="fxfamilynav-tertiarynav-trigger" aria-controls="fxfamilynav-tertiarynav">
       <span>{{ _('Menu') }}</span>
       <div class="trigger-dots">
         <div class="trigger-dot"></div>
