--- a/bedrock/firefox/templates/firefox/choose.html
+++ b/bedrock/firefox/templates/firefox/choose.html
@@ -30,7 +30,7 @@
 {% block alt_header %}
 <div class="header-content">
   <div id="tabzilla">
-    <a href="{{ url('mozorg.home') }}">Mozilla</a>
+    <a href="{{ url('mozorg.home') }}" data-link-type="nav" data-link-name="tabzilla">Mozilla</a>
   </div>
   <h1>{{ high_res_img('firefox/choose/header-firefox.png', {'alt': 'Firefox', 'width': '223', 'height': '84'}) }}</h1>
 
