--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -326,19 +326,19 @@
     <div class="container">
       <ul>
         <li>
-          <a class="add-ons" rel="external" href="https://addons.mozilla.org/" data-element-location="Secondary Link Clicks" data-link-type="href">
+          <a class="add-ons" rel="external" href="https://addons.mozilla.org/">
             <h2>{{ _('Add-ons') }}</h2>
             <p>{{ _('Compare prices, check the weather, listen to music, send a tweet and more right from Firefox.') }}</p>
           </a>
         </li>
         <li>
-          <a class="careers" rel="external" href="https://careers.mozilla.org/" data-element-location="Secondary Link Clicks" data-link-type="href">
+          <a class="careers" rel="external" href="https://careers.mozilla.org/">
             <h2>{{ _('Careers') }}</h2>
             <p>{{ _('Learn about the benefits of working at Mozilla and view open positions around the world.') }}</p>
           </a>
         </li>
         <li>
-          <a class="help" rel="external" href="https://support.mozilla.org/" data-element-location="Secondary Link Clicks" data-link-type="href">
+          <a class="help" rel="external" href="https://support.mozilla.org/">
             <h2>{{ _('Need help?') }}</h2>
             <p>{{ _('Get answers to your questions about Firefox and all Mozilla products from our support team.') }}</p>
           </a>
