--- a/bedrock/base/templates/includes/site-footer.html
+++ b/bedrock/base/templates/includes/site-footer.html
@@ -1,7 +1,7 @@
       <footer id="colophon" class="{% block footer_class %}{% endblock %}">
         <nav class="row">
           <div class="col col-1">
-            <h1 class="logo"><a href="{{ url('mozorg.home') }}">Mozilla</a></h1>
+            <h1 class="logo"><a href="{{ url('mozorg.home') }}" data-link-type="footer" data-link-name="Mozilla">Mozilla</a></h1>
             <p class="license">
               {%- trans url=url('foundation.licensing.website-content') -%}
               Portions of this content are ©1998–{{ current_year }} by individual
