--- a/bedrock/firefox/templates/firefox/family/index.html
+++ b/bedrock/firefox/templates/firefox/family/index.html
@@ -56,7 +56,7 @@
     {% block tabzilla_tab %}
     <div class="content">
       <div id="tabzilla">
-        <a href="{{ url('mozorg.home') }}">Mozilla</a>
+        <a href="{{ url('mozorg.home') }}" data-link-type="nav" data-link-name="tabzilla">Mozilla</a>
       </div>
     </div>
     {% endblock %}
