--- a/bedrock/firefox/templates/firefox/firstrun/learnmore/learnmore.html
+++ b/bedrock/firefox/templates/firefox/firstrun/learnmore/learnmore.html
@@ -4,6 +4,8 @@
 
 {% extends "firefox/whatsnew_42/base.html" %}
 
+{% block gtm_page_id %}data-gtm-page-id="/firefox/firstrun/learnmore/"{% endblock %}
+
 {% add_lang_files "firefox/whatsnew_42" %}
 
 {% block body_class %}firefox-up-to-date{% endblock %}
