--- a/bedrock/firefox/templates/firefox/releases/aurora-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/aurora-notes.html
@@ -4,6 +4,8 @@
 
 {% extends "firefox/releases/release-notes.html" %}
 
+{% block gtm_page_id %}data-gtm-page-id="/firefox/android/auroranotes/"{% endblock %}
+
 {% block page_css %}
   {% stylesheet 'firefox_releasenotes_firefox' %}
 {% endblock %}
