--- a/bedrock/firefox/templates/firefox/releases/dev-browser-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/dev-browser-notes.html
@@ -1,5 +1,7 @@
 {% extends "firefox/releases/aurora-notes.html" %}
 
+{% block gtm_page_id %}data-gtm-page-id="/firefox/auroranotes/"{% endblock %}
+
 {% block site_header_logo %}
   <h2>{{ high_res_img('firefox/developer/title-inverse.png', {'alt': _('Firefox Developer Edition'), 'width': '220', 'height': '84'}) }}</h2>
 {% endblock %}
