--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -6,6 +6,8 @@
 
 {% add_lang_files "mozorg/home/index" %}
 
+{% block gtm_page_id %}data-gtm-page-id="Homepage"{% endblock %}
+
 {% block page_image %}{{ static('img/home/page-image.png') }}{% endblock %}
 
 {% block page_title %}
