--- a/bedrock/thunderbird/templates/thunderbird/releases/beta-notes.html
+++ b/bedrock/thunderbird/templates/thunderbird/releases/beta-notes.html
@@ -4,4 +4,6 @@
 
 {% extends "thunderbird/releases/release-notes.html" %}
 
+{% block gtm_page_id %}data-gtm-page-id="/thunderbird/beta/releasenotes/"{% endblock %}
+
 {% set channel_name = 'Beta' %}
