--- a/bedrock/firefox/templates/firefox/australis/fx36/tour.html
+++ b/bedrock/firefox/templates/firefox/australis/fx36/tour.html
@@ -6,6 +6,8 @@
 
 {% set_lang_files "firefox/australis/fx36_tour" %}
 
+{% block gtm_page_id %}data-gtm-page-id="/firefox/tour/"{% endblock %}
+
 {% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
 
 {#- This will appear as <meta property="og:title"> which can be used for social share -#}
