--- a/bedrock/firefox/templates/firefox/australis/fx38_0_5/firstrun.html
+++ b/bedrock/firefox/templates/firefox/australis/fx38_0_5/firstrun.html
@@ -6,6 +6,8 @@
 
 {% extends "firefox/base.html" %}
 
+{% block gtm_page_id %}data-gtm-page-id="/firefox/firstrun/"{% endblock %}
+
 {% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
 
 {#- This will appear as <meta property="og:title"> which can be used for social share -#}
