--- a/bedrock/firefox/templates/firefox/firstrun/learnmore/yahoo-search.html
+++ b/bedrock/firefox/templates/firefox/firstrun/learnmore/yahoo-search.html
@@ -4,6 +4,8 @@
 
 {% extends "firefox/base-resp.html" %}
 
+{% block gtm_page_id %}data-gtm-page-id="/firefox/firstrun/learnmore/"{% endblock %}
+
 {% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
 
 {#- This will appear as <meta property="og:title"> which can be used for social share -#}
