--- a/bedrock/firefox/templates/firefox/releases/esr-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/esr-notes.html
@@ -3,3 +3,5 @@
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. #}
 
 {% extends "firefox/releases/release-notes.html" %}
+
+{% block gtm_page_id %}data-gtm-page-id="/firefox/esr/releasenotes/"{% endblock %}
