--- a/bedrock/firefox/templates/firefox/whatsnew_42/base.html
+++ b/bedrock/firefox/templates/firefox/whatsnew_42/base.html
@@ -6,6 +6,8 @@
 
 {% add_lang_files "firefox/whatsnew_42" %}
 
+{% block gtm_page_id %}data-gtm-page-id="/firefox/whatsnew/"{% endblock %}
+
 {% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
 
 {#- This will appear as <meta property="og:title"> which can be used for social share -#}
