--- a/bedrock/newsletter/templates/newsletter/confirm.html
+++ b/bedrock/newsletter/templates/newsletter/confirm.html
@@ -2,6 +2,8 @@
 
 {% set_lang_files "mozorg/newsletters" %}
 
+{% block gtm_page_id %}data-gtm-page-id="/newsletter/confirm/"{% endblock %}
+
 {% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
 
 {% block body_id %}newsletter-confirm{% endblock body_id %}
