--- a/bedrock/newsletter/templates/newsletter/existing.html
+++ b/bedrock/newsletter/templates/newsletter/existing.html
@@ -4,6 +4,8 @@
 
 {# Template used for a user to manage their subscriptions #}
 
+{% block gtm_page_id %}data-gtm-page-id="/newsletter/existing/"{% endblock %}
+
 {% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
 
 {% block body_id %}newsletter-existing{% endblock body_id %}
